--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --mode build-mf",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -16,8 +16,8 @@
     "@mui/material": "^7.0.2",
     "@mui/styled-engine-sc": "^7.0.2",
     "@tailwindcss/vite": "^4.1.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.5.3",
     "styled-components": "^6.1.17",
     "tailwindcss": "^4.1.5"
